--- a/package.json
+++ b/package.json
@@ -1,26 +1,15 @@
 {
-  "name": "mini-soldador-usb-store",
+  "name": "one-store",
   "version": "1.0.0",
-  "description": "Tienda online de un solo producto: Mini Soldador USB",
-  "main": "server.js",
   "type": "module",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
-  "keywords": [
-    "stripe",
-    "express",
-    "tienda",
-    "mini soldador",
-    "node",
-    "one product store"
-  ],
-  "author": "TuNombre",
-  "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "stripe": "^12.6.0"
+    "stripe": "^12.0.0"
   }
 }
